option('run-in-place', 
  type : 'boolean', 
  value : false, 
  description : 'Load ui data from the source tree'
)

option('caja-actions',
  type : 'boolean', 
  value : true, 
  description : 'Build the nautilus context menu actions'
)

option('packagekit',
  type : 'boolean', 
  value : true, 
  description : 'Build PackageKit installer for missing utilities'
)

option('magic',
  type : 'boolean', 
  value : true, 
  description : 'Use libmagic to detect file type'
)

option('cpio',
  type : 'string',
  value : 'auto',
  description : 'Path to the cpio program'
)
