include $(top_srcdir)/mate-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = engrampa
DOC_ENTITIES = legal.xml
DOC_INCLUDES =
DOC_FIGURES = 					\
	figures/engrampa_home.png		\
	figures/engrampa_leftarrow.png	\
	figures/engrampa_main_window.png	\
	figures/engrampa_rightarrow.png	\
	figures/engrampa_uparrow.png

DOC_LINGUAS = bg ca cs de el en_GB es fi fr it ja oc nl ru sv vi uk zh_CN

-include $(top_srcdir)/git.mk
