@YELP_HELP_RULES@

HELP_ID = engrampa
HELP_FILES = index.docbook legal.xml
HELP_MEDIA = 					\
	figures/engrampa_home.png		\
	figures/engrampa_leftarrow.png	\
	figures/engrampa_main_window.png	\
	figures/engrampa_rightarrow.png	\
	figures/engrampa_uparrow.png

HELP_LINGUAS = bg ca cs de el en_GB es fi fr it ja oc nl ru sv vi uk zh_CN

-include $(top_srcdir)/git.mk
